--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,20 +1,56 @@
-.test {
-  width: auto;
-  height: auto;
-  border: 1px solid midnightblue;
-  padding: 10px;
-  background-color: lightcoral;
+.chat-drawer-content-container {
+  width: 100%;
+  height: 100%;
+  /* padding: 10px; */
+  /* box-sizing: border-box; */
+
+  /* background: #f9f9f9; */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
 }
 
+.chat-header-container {
+  width: 100%;
+  height: 60px;
+
+  background: #28a8e0;
+  box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
+
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+.chat-message-container {
+  padding: 20px;
+  flex: 1;
+}
+.chat-bar-container {
+  padding: 10px;
+}
+
+.chat-drawer-chat-bar {
+  flex-shrink: 0;
+  flex-grow: 0;
+  height: 65px;
+}
+
+.chata-drawer:focus {
+  outline: none;
+}
+
+/* rc-drawer */
 .drawer-content {
   background: white;
 }
-
 .drawer-handle {
   top: 72px;
   background: #fff;
 }
-
 .drawer-handle-icon {
   background: #333;
+}
+.drawer-bottom .drawer-content-wrapper,
+.drawer-top .drawer-content-wrapper {
+  left: 0;
 }
