--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,11 +1,6 @@
-.chat-drawer-content-container {
+.chata-drawer-content-container {
   width: 100%;
   height: 100%;
-  /* padding: 10px; */
-  /* box-sizing: border-box; */
-
-  /* background: #f9f9f9; */
-
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -14,17 +9,21 @@
 .chat-header-container {
   width: 100%;
   height: 60px;
-
   background: #28a8e0;
   box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
-
   flex-grow: 0;
   flex-shrink: 0;
+  z-index: 1;
 }
+
 .chat-message-container {
-  padding: 20px;
+  max-height: calc(100% - 140px);
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* padding: 20px; */
   flex: 1;
 }
+
 .chat-bar-container {
   padding: 10px;
 }
@@ -32,11 +31,67 @@
 .chat-drawer-chat-bar {
   flex-shrink: 0;
   flex-grow: 0;
-  height: 65px;
+  height: 60px;
 }
 
 .chata-drawer:focus {
   outline: none;
+}
+
+/* response loading dots */
+.response-loading-container {
+  position: absolute;
+  bottom: 45px;
+  left: 20px;
+}
+.response-loading {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.response-loading div {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  /* background: rgba(0, 0, 0, 0.2); */
+  background: #e2e2e2;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.response-loading div:nth-child(1) {
+  left: 6px;
+  animation: response-loading1 0.6s infinite;
+}
+.response-loading div:nth-child(2) {
+  left: 6px;
+  animation: response-loading2 0.6s infinite;
+}
+.response-loading div:nth-child(3) {
+  left: 26px;
+  animation: response-loading2 0.6s infinite;
+}
+.response-loading div:nth-child(4) {
+  left: 45px;
+  animation: response-loading3 0.6s infinite;
+}
+.chata-drawer-header-button {
+  background: transparent;
+  border: none;
+  color: white;
+  margin: 15px;
+  margin-right: 0;
+  font-size: 20px;
+}
+
+/* custom scrollbar */
+.chat-message-container > div:last-child {
+  opacity: 0;
+  transition: opacity 200ms ease;
+}
+.chat-message-container:hover > div:last-child {
+  opacity: 1;
 }
 
 /* rc-drawer */
@@ -53,4 +108,30 @@
 .drawer-bottom .drawer-content-wrapper,
 .drawer-top .drawer-content-wrapper {
   left: 0;
+}
+
+/* animations */
+@keyframes response-loading1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes response-loading3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes response-loading2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(19px, 0);
+  }
 }
