--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -1,32 +1,86 @@
 /* @import url("https://fonts.googleapis.com/css?family=Titillium+Web"); */
 
+.chat-single-message-container:first-of-type {
+  margin-top: 20px;
+}
 .chat-single-message-container:not(:first-of-type) {
   margin-top: 10px;
 }
 .chat-single-message-container.response {
   display: flex;
   justify-content: flex-start;
+  margin-left: 20px;
+  max-height: 88%;
+
+  animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .chat-single-message-container.request {
   display: flex;
   justify-content: flex-end;
-}
+  margin-right: 20px;
 
+  animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
 .chat-single-message-container .chat-message-bubble {
   padding: 13px;
   border-radius: 10px;
   max-width: 70%;
   word-wrap: break-word;
   font-family: "Titillium Web", sans-serif;
+  font-size: 14px;
   letter-spacing: 0.04em;
+}
+.chat-single-message-container .chat-message-bubble.full-width {
+  max-width: calc(100% - 45px);
+}
+.chat-single-message-container.response .chat-message-bubble.active {
+  border: 1px solid #c3c3c3;
 }
 .chat-single-message-container.response .chat-message-bubble {
   background: white;
   color: #5d5d5d;
-  box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1);
+  border: 1px solid #d3d3d352;
+  /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
 }
 .chat-single-message-container.request .chat-message-bubble {
   background: #28a8e0;
   color: white;
-  box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1);
+  border: 1px solid #28a8e0;
+  /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
+}
+.toolbar {
+  display: none;
+  width: 50px;
+}
+.chat-single-message-container.response:hover .toolbar {
+  display: block;
+}
+.hover-toolbar-options {
+  border: none;
+  margin: 15px;
+  font-size: 20px;
+  color: #5f5f5f;
+}
+
+/* animations */
+@keyframes scale-up-br {
+  0% {
+    transform: scale(0.5);
+    transform-origin: 100% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 100% 100%;
+  }
+}
+
+@keyframes scale-up-bl {
+  0% {
+    transform: scale(0.5);
+    transform-origin: 0% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 0% 100%;
+  }
 }
