--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -9,7 +9,8 @@
   padding: 10px;
   padding-left: 20px;
   margin: 10px;
-  height: 18px;
+  height: 42px;
+  box-sizing: border-box;
   border-radius: 24px;
   font-size: 16px;
   font-family: "Titillium Web", sans-serif;
