add suggestion rendering

--- a/src/components/SpeechToTextButton/SpeechToTextButton.css
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.css
@@ -13,7 +13,7 @@
   background: #28a8e0;
   color: white;
   border: none;
-  transition: box-shadow 0.2s ease;
+  /* transition: box-shadow 0.2s ease; */
 
   flex-shrink: 0;
   flex-grow: 0;
