--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -18,7 +18,7 @@
   outline: none !important;
 
   border: 1px solid #00000017;
-  transition: box-shadow 0.2s ease;
+  /* transition: box-shadow 0.2s ease; */
 
   flex: 1;
 }
