--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -76,13 +76,18 @@
   left: 45px;
   animation: response-loading3 0.6s infinite;
 }
-.chata-drawer-header-button {
+.chat-header-container button {
   background: transparent;
   border: none;
   color: white;
   margin: 15px;
   margin-right: 0;
   font-size: 20px;
+  cursor: pointer;
+  outline: none !important;
+}
+.chat-header-container button:hover {
+  opacity: 0.7;
 }
 
 /* custom scrollbar */
