--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -16,11 +16,9 @@
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
   outline: none !important;
-
+  width: calc(100% - 20px);
   border: 1px solid #00000017;
   /* transition: box-shadow 0.2s ease; */
-
-  flex: 1;
 }
 .chata-input:disabled {
   background: rgba(0, 0, 0, 0.03);
@@ -30,4 +28,69 @@
 }
 .chata-input::placeholder {
   color: rgba(0, 0, 0, 0.3);
+}
+
+/* autosuggest */
+.react-autosuggest__container,
+.chata-input-container {
+  position: relative;
+  flex: 1;
+}
+.react-autosuggest__input--focused {
+  outline: none;
+  border: 1px solid #a5cd39 !important;
+}
+.react-autosuggest__input::-ms-clear {
+  display: none;
+}
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+.react-autosuggest__suggestions-container--open {
+  position: absolute;
+  bottom: 45px;
+  margin: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: block;
+  width: calc(100% - 20px);
+  border-radius: 24px;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  z-index: 2;
+  background-color: #fff;
+  color: black;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 2px;
+  padding-left: 18px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
+.react-autosuggest__section-container {
+  /* border-top: 1px dashed #ccc; */
+}
+
+.react-autosuggest__section-container--first {
+  /* border-top: 0; */
+}
+
+.react-autosuggest__section-title {
+  padding: 10px 0 0 10px;
+  font-size: 12px;
+  color: #777;
 }
