--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -18,7 +18,6 @@
   outline: none !important;
   width: calc(100% - 20px);
   border: 1px solid #00000017;
-  /* transition: box-shadow 0.2s ease; */
 }
 .chata-input:disabled {
   background: rgba(0, 0, 0, 0.03);
@@ -75,18 +74,12 @@
   cursor: pointer;
   padding: 2px;
   padding-left: 18px;
+  letter-spacing: 0.05em;
+  color: #525252;
 }
 
 .react-autosuggest__suggestion--highlighted {
   background-color: rgba(0, 0, 0, 0.1) !important;
-}
-
-.react-autosuggest__section-container {
-  /* border-top: 1px dashed #ccc; */
-}
-
-.react-autosuggest__section-container--first {
-  /* border-top: 0; */
 }
 
 .react-autosuggest__section-title {
