--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -1,19 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web");
+
 .chata-response-content-container {
   height: 100%;
 }
 
+.chata-suggestions-container {
+  margin-top: 5px;
+}
 .chata-suggestion-btn {
-  padding: 5px 17px;
+  padding: 6px 14px;
   background: transparent;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  border-radius: 8px;
   font-family: "Titillium Web", sans-serif;
   font-size: 12px;
   margin-top: 5px;
   outline: none !important;
   cursor: pointer;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.05em;
+  transition: all 0.1s ease;
 }
 .chata-suggestion-btn:hover {
-  border: 1px solid rgba(0, 0, 0, 0.25);
+  border: 1px solid transparent;
+  color: white;
+  background: #28a8e0;
 }
