--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,16 +1,9 @@
-:root {
-  --accent-color: #28a8e0;
-  --accent-color: #28a8e0;
-  --background-color: #fff;
-  --text-color-primary: #5d5d5d;
-  --text-color-placeholder: #ffffff9c;
-}
 
 .chata-drawer-content-container {
   width: 100%;
   height: 100%;
   display: flex;
-  background: var(--background-color);
+  background: var(--chata-drawer-background-color);
   flex-direction: column;
   justify-content: stretch;
 }
@@ -18,7 +11,7 @@
 .chat-header-container {
   width: 100%;
   height: 60px;
-  background: var(--accent-color);
+  background: var(--chata-drawer-accent-color);
   box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
   flex-grow: 0;
   flex-shrink: 0;
@@ -114,10 +107,12 @@
 }
 .drawer-handle {
   top: 72px;
-  background: #fff;
+  background: var(--chata-drawer-background-color);
 }
-.drawer-handle-icon {
-  background: #333;
+.drawer-handle-icon,
+.drawer-handle-icon::before,
+.drawer-handle-icon::after {
+  background: var(--chata-drawer-text-color-primary);
 }
 .drawer-bottom .drawer-content-wrapper,
 .drawer-top .drawer-content-wrapper {
