add icons, tooltips, and some message toolbar options

--- a/src/components/ChataTable/ChataTable.css
+++ b/src/components/ChataTable/ChataTable.css
@@ -22,7 +22,7 @@
   height: 100%;
 }
 .chata-table .tabulator-row {
-  user-select: none;
+  /* user-select: none; This breaks copy/paste */
   border-bottom: 1px solid var(--chata-table-border-color);
 }
 .chata-table .tabulator-tableHolder {
