--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web");
 
 .chata-drawer-content-container {
   width: 100%;
@@ -82,7 +83,7 @@
   background: transparent;
   border: none;
   color: white;
-  margin: 15px;
+  margin: 10px;
   margin-right: 0;
   font-size: 20px;
   cursor: pointer;
@@ -90,6 +91,15 @@
 }
 .chat-header-container button:hover {
   opacity: 0.7;
+}
+.chat-header-container button svg {
+  width: 35px;
+  height: 35px;
+}
+.chata-drawer-tooltip {
+  font-family: "Titillium Web", sans-serif;
+  letter-spacing: 0.04em;
+  font-weight: bold;
 }
 
 /* custom scrollbar */
