--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -22,6 +22,7 @@
   animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .chat-single-message-container .chat-message-bubble {
+  position: relative;
   padding: 13px;
   border-radius: 10px;
   max-width: 70%;
@@ -48,20 +49,25 @@
   border: 1px solid var(--chata-drawer-accent-color);
   /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
 }
-.toolbar {
+.chat-message-toolbar {
   display: none;
-  width: 50px;
+  position: absolute;
+  background: var(--chata-drawer-background-color);
+  top: -22px;
+  padding: 5px 16px;
+  border-radius: 6px;
+  line-height: 28px;
+  border: 1px solid var(--chata-drawer-border-color);
 }
-.chat-single-message-container.response:hover .toolbar {
+.chat-message-toolbar.right {
+  right: -9px;
+}
+.chat-message-toolbar.left {
+  left: -9px;
+}
+.chat-message-bubble:hover .chat-message-toolbar {
   display: block;
 }
-.hover-toolbar-options {
-  border: none;
-  margin: 15px;
-  font-size: 20px;
-  color: #5f5f5f;
-}
-
 /* animations */
 @keyframes scale-up-br {
   0% {
