--- a/src/components/SpeechToTextButton/SpeechToTextButton.css
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.css
@@ -25,26 +25,13 @@
 .chat-voice-record-button.listening {
   background: #ff471a;
 }
-/* .chat-voice-record-button:before {
-  content: "";
-  top: 0;
-  left: 0;
-  width: 41px;
-  height: 41px;
-  position: absolute;
-  z-index: 1;
-  animation: slide 1s infinite 3s;
-
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.8) 50%,
-    rgba(128, 186, 232, 0) 99%,
-    rgba(125, 185, 232, 0) 100%
-  );
-} */
 .chat-voice-record-icon {
   vertical-align: top;
+}
+.chata-tooltip {
+  font-family: "Titillium Web", sans-serif;
+  letter-spacing: 0.04em;
+  font-weight: bold;
 }
 
 @keyframes slide {
