--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web");
 
+body {
+  font-family: "Titillium Web", sans-serif;
+}
+
 .chata-drawer-content-container {
   width: 100%;
   height: 100%;
@@ -10,6 +14,8 @@
 }
 
 .chat-header-container {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 60px;
   background: var(--chata-drawer-accent-color);
@@ -17,6 +23,19 @@
   flex-grow: 0;
   flex-shrink: 0;
   z-index: 1;
+}
+.chata-header-right-container {
+  width: 100px;
+}
+.chata-header-center-container {
+  color: #fff;
+  line-height: 60px;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  font-weight: 700;
+}
+.chata-header-left-container {
+  width: 100px;
 }
 
 .chat-message-container {
