--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -1,4 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css?family=Titillium+Web"); */
+/* @import url("https://fonts.googleapis.com/css?family=Titillium+Web:100,200,300,400,500,600,700,800,900");
+ */
 
 .chat-single-message-container:first-of-type {
   margin-top: 20px;
