start making visualizations - column chart (WIP) separate safetynet into its own component

--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -121,7 +121,8 @@
 .chata-drawer-tooltip {
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
-  font-weight: bold;
+  /* font-weight: bold; */
+  transition: all 0.2s ease;
 }
 
 /* custom scrollbar */
