--- a/src/components/ChataBarChart/ChataBarChart.css
+++ b/src/components/ChataBarChart/ChataBarChart.css
@@ -20,7 +20,7 @@
   display: none;
 }
 
-.d3-tip {
+/* .d3-tip {
   position: absolute;
   line-height: 1;
   font-size: 12px;
@@ -31,10 +31,10 @@
   transition: all 0.2s ease;
   font-family: "Titillium Web", sans-serif;
   z-index: 9999;
-}
+} */
 
 /* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
+/* .d3-tip:after {
   box-sizing: border-box;
   display: inline;
   font-size: 10px;
@@ -44,11 +44,11 @@
   content: "\25BC";
   position: absolute;
   text-align: center;
-}
+} */
 
 /* Style northward tooltips differently */
-.d3-tip.n:after {
+/* .d3-tip.n:after {
   margin: -1px 0 0 0;
   top: 100%;
   left: 0;
-}
+} */
