--- a/src/components/SpeechToTextButton/SpeechToTextButton.css
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.css
@@ -31,6 +31,7 @@
 .chata-tooltip {
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
+  padding: 7px 15px;
   /* font-weight: bold; */
 }
 
