--- a/src/components/ChataColumnChart/ChataColumnChart.css
+++ b/src/components/ChataColumnChart/ChataColumnChart.css
@@ -10,7 +10,7 @@
 .chata-bar-chart-container .bar {
   fill: #28a8e0;
   fill-opacity: 0.7;
-  transition: all 0.2s ease;
+  /* transition: all 0.2s ease; */
 }
 
 .chata-bar-chart-container .bar:hover {
