--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -22,6 +22,9 @@
   background: transparent;
   color: var(--chata-drawer-text-color-primary);
 }
+.chata-input.left-padding {
+  padding-left: 54px;
+}
 .chata-input:disabled {
   background: rgba(0, 0, 0, 0.03);
 }
@@ -142,4 +145,10 @@
 .response-loading div:nth-child(4) {
   left: 45px;
   animation: response-loading3 0.6s infinite;
+}
+
+.chat-bar-input-icon {
+  position: absolute;
+  left: 30px;
+  top: 20px;
 }
