--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -103,5 +103,5 @@
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
-  transition: translate 0.2s ease;
+  transition: all 0.2s ease;
 }
