--- a/src/components/ChataLineChart/ChataLineChart.css
+++ b/src/components/ChataLineChart/ChataLineChart.css
@@ -9,17 +9,17 @@ text.y-axis-label {
   fill: currentColor;
 }
 
-.chata-bar-chart-container .bar {
+.chata-bar-chart-container .line-dot {
   fill: #28a8e0;
   fill-opacity: 0.7;
   /* transition: all 0.2s ease; */
 }
 
-.chata-bar-chart-container .bar:hover {
+.chata-bar-chart-container .line-dot:hover {
   fill-opacity: 1;
 }
 
-.chata-bar-chart-container .bar.active {
+.chata-bar-chart-container .line-dot.active {
   fill: #a5cd39;
 }
 
