--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -25,9 +25,12 @@
   z-index: 1;
 }
 .chata-header-right-container {
+  display: flex;
+  justify-content: right;
   width: 100px;
 }
 .chata-header-center-container {
+  position: relative;
   color: #fff;
   line-height: 60px;
   font-size: 18px;
@@ -40,6 +43,15 @@
 .chata-header-left-container {
   width: 100px;
 }
+.chata-button.close svg {
+  width: 30px;
+  height: 30px;
+  padding-top: 3px;
+}
+.chata-button.clear-all {
+  position: absolute;
+  right: 10px;
+}
 
 .chat-message-container {
   max-height: calc(100% - 140px);
@@ -50,13 +62,25 @@
 }
 
 .chat-bar-container {
+  position: relative;
   padding: 10px;
+  padding-top: 30px;
 }
 
 .chat-drawer-chat-bar {
   flex-shrink: 0;
   flex-grow: 0;
   height: 60px;
+}
+
+.watermark {
+  position: absolute;
+  color: var(--chata-drawer-text-color-primary);
+  text-align: center;
+  opacity: 0.2;
+  top: 9px;
+  width: calc(100% - 10px);
+  font-size: 13px;
 }
 
 .chata-drawer:focus {
@@ -104,6 +128,11 @@
 .drawer-handle {
   top: 72px;
   background: var(--chata-drawer-background-color);
+  transition: opacity 0.5s ease;
+}
+.drawer-handle.hide {
+  opacity: 0;
+  visibility: hidden;
 }
 .drawer-handle-icon,
 .drawer-handle-icon::before,
