--- a/src/components/ChataColumnChart/ChataColumnChart.css
+++ b/src/components/ChataColumnChart/ChataColumnChart.css
@@ -1,37 +1,34 @@
-.chata-bar-chart-container .axis line {
+.chata-chart-container .axis line {
   stroke-width: 1px;
-  stroke: #ddd;
+  stroke: currentColor;
+  opacity: 0.15;
   shape-rendering: crispedges;
 }
-.chata-bar-chart-container .axis text,
+.chata-chart-container .axis text,
 text.x-axis-label,
 text.y-axis-label {
   fill: currentColor;
+  fill-opacity: 0.7;
 }
 
-.chata-bar-chart-container .bar {
+.chata-chart-container .bar {
   fill: #28a8e0;
   fill-opacity: 0.7;
-  /* transition: all 0.2s ease; */
 }
 
-.chata-bar-chart-container .bar:hover {
+.chata-chart-container .bar:hover {
   fill-opacity: 1;
 }
 
-.chata-bar-chart-container .bar.active {
+.chata-chart-container .bar.active {
   fill: #a5cd39;
 }
 
-.chata-bar-chart-container .axis.hide-axis-line path {
+.chata-chart-container .axis path {
   display: none;
 }
 
-.chata-bar-chart-container .axis:not(.hide-axis-line) path {
-  color: #ddd;
-}
-
-.chata-bar-chart-container
+.chata-chart-container
   .axis-Bottom.rotated
   text:not(.x-axis-label):not(.y-axis-label) {
   transform: rotate(-45deg);
