fix tooltip styling

--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -108,6 +108,8 @@
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
+  transition: none;
+  opacity: 1 !important;
   z-index: 99999; /* necessary to show up on top of rc drawer */
 }
 
