--- a/src/components/SpeechToTextButton/SpeechToTextButton.css
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.css
@@ -32,8 +32,8 @@
   font-family: "Titillium Web", sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
-  transition: all 0.2s ease;
-  /* font-weight: bold; */
+  opacity: 1 !important;
+  z-index: 99999;
 }
 
 @keyframes slide {
