--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -33,7 +33,7 @@
   letter-spacing: 0.04em;
 }
 .chat-single-message-container .chat-message-bubble.full-width {
-  max-width: calc(100% - 45px);
+  max-width: calc(100% - 20px);
 }
 .chat-single-message-container.response .chat-message-bubble.active {
   border: 1px solid #c3c3c3;
@@ -42,13 +42,16 @@
   background: var(--chata-drawer-background-color);
   color: var(--chata-drawer-text-color-primary);
   border: 1px solid #d3d3d352;
-  /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
 }
 .chat-single-message-container.request .chat-message-bubble {
   background: var(--chata-drawer-accent-color);
   color: white;
   border: 1px solid var(--chata-drawer-accent-color);
-  /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
+}
+/* Increase height of message to include table filters,
+so we dont have to redraw the whole table */
+.chat-single-message-container.response.filtering-table {
+  max-height: calc(85% + 35px);
 }
 .chat-message-toolbar {
   display: none;
