Fix and simplify logic for chart tooltips

--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -109,6 +109,7 @@
   letter-spacing: 0.04em;
   padding: 7px 15px;
   transition: all 0.2s ease;
+  text-align: left;
   opacity: 1 !important;
   z-index: 99999; /* necessary to show up on top of rc drawer */
 }
